--- a/src/cellsociety/default.css
+++ b/src/cellsociety/default.css
@@ -1,6 +1,6 @@
 .root {
     -fx-font-size: 10pt;
-    -fx-font-family: "Courier New";
+    -fx-font-family: "Futura";
     -fx-base: honeydew;
     -fx-background: darkslateblue;
 }
