--- a/src/cellsociety/default.css
+++ b/src/cellsociety/default.css
@@ -49,15 +49,15 @@
   -fx-fill: aliceblue;
 }
 
-.Wator-0 {
+.WaTor-0 {
   -fx-fill: blue;
 }
 
-.Wator-1 {
+.WaTor-1 {
   -fx-fill: lightsalmon;
 }
 
-.Wator-2 {
+.WaTor-2 {
   -fx-fill: lightslategray;
 }
 
