change colors for wator

--- a/src/cellsociety/default.css
+++ b/src/cellsociety/default.css
@@ -54,11 +54,11 @@
 }
 
 .WaTor-1 {
-  -fx-fill: lightsalmon;
+  -fx-fill: darkorange;
 }
 
 .WaTor-2 {
-  -fx-fill: lightslategray;
+  -fx-fill: silver;
 }
 
 .title {
