--- a/src/cellsociety/view/resources/dark.css
+++ b/src/cellsociety/view/resources/dark.css
@@ -1,8 +1,8 @@
 .root {
     -fx-font-size: 10pt;
     -fx-font-family: "Futura";
-    -fx-base: mediumaquamarine;
-    -fx-background: #1f1f2e;
+    -fx-base: #00cc66;
+    -fx-background: #0d0d0d;
 }
 
 .GameofLife-0 {
@@ -26,7 +26,7 @@
 }
 
 .Segregation-0 {
-    -fx-fill: aliceblue;
+    -fx-fill: #595959;
 }
 
 .Segregation-1 {
@@ -50,11 +50,11 @@
 }
 
 .WaTor-0 {
-    -fx-fill: steelblue;
+    -fx-fill: #000099;
 }
 
 .WaTor-1 {
-    -fx-fill: tomato;
+    -fx-fill: #ff4d4d;
 }
 
 .WaTor-2 {
@@ -73,5 +73,5 @@
 }
 
 .rect {
-    -fx-stroke: white;
+    -fx-stroke: #b3b3b3;
 }
