Revert "kathleen messing up"
This reverts commit 2c96cd58309c22a7f9d1b401c33975daf9df32b4.

--- a/src/cellsociety/view/resources/dark.css
+++ b/src/cellsociety/view/resources/dark.css
@@ -14,27 +14,27 @@
 }
 
 .Percolation-0 {
-    -fx-fill: #262626;
+    -fx-fill: black;
 }
 
 .Percolation-1 {
-    -fx-fill: #bfbfbf;
+    -fx-fill: aliceblue;
 }
 
 .Percolation-2 {
-    -fx-fill: #000099;
+    -fx-fill: darkturquoise;
 }
 
 .Segregation-0 {
-    -fx-fill: #262626;
+    -fx-fill: #595959;
 }
 
 .Segregation-1 {
-    -fx-fill: #600080;
+    -fx-fill: deeppink;
 }
 
 .Segregation-2 {
-    -fx-fill: #00995c;
+    -fx-fill: dodgerblue;
 }
 
 .Fire-0 {
