add rock paper scissors

--- a/src/cellsociety/view/resources/dark.css
+++ b/src/cellsociety/view/resources/dark.css
@@ -61,6 +61,18 @@
     -fx-fill: slategrey;
 }
 
+.RockPaperScissors-0 {
+    -fx-fill: #808080;
+}
+
+.RockPaperScissors-1 {
+    -fx-fill: #f2f2f2;
+}
+
+.RockPaperScissors-2 {
+    -fx-fill: #ff0066;
+}
+
 .title {
     -fx-fill: #f2f2f2;
 }
@@ -70,8 +82,4 @@
     -fx-background-radius: 15;
     -fx-padding: 8;
     -fx-text-fill: black;
-}
-
-.rect {
-    -fx-stroke: white;
 }
