--- a/src/cellsociety/view/resources/light.css
+++ b/src/cellsociety/view/resources/light.css
@@ -61,6 +61,18 @@
     -fx-fill: silver;
 }
 
+.RockPaperScissors-0 {
+    -fx-fill: #808080;
+}
+
+.RockPaperScissors-1 {
+    -fx-fill: #f2f2f2;
+}
+
+.RockPaperScissors-2 {
+    -fx-fill: #ff0066;
+}
+
 .title {
     -fx-fill: aliceblue;
 }
@@ -69,8 +81,4 @@
     -fx-border-radius: 20;
     -fx-background-radius: 15;
     -fx-padding: 8;
-}
-
-.rect {
-    -fx-stroke: black;
 }
