--- a/src/cellsociety/view/resources/default.css
+++ b/src/cellsociety/view/resources/default.css
@@ -90,27 +90,27 @@
 }
 
 .BylsLoop-0 {
-  -fx-fil: #f2f2f2;
+  -fx-fill: #f2f2f2;
 }
 
 .BylsLoop-1 {
-  -fx-fil: #ffff66;
+  -fx-fill: #ffff66;
 }
 
 .BylsLoop-2 {
-  -fx-fil: #000000;
+  -fx-fill: #000000;
 }
 
 .BylsLoop-3 {
-  -fx-fil: #ff0000;
+  -fx-fill: #ff0000;
 }
 
 .BylsLoop-4 {
-  -fx-fil: #33cc33;
+  -fx-fill: #33cc33;
 }
 
 .BylsLoop-5 {
-  -fx-fil: #0000ff;
+  -fx-fill: #0000ff;
 }
 
 .title {
