--- a/src/cellsociety/view/resources/light.css
+++ b/src/cellsociety/view/resources/light.css
@@ -1,8 +1,8 @@
 .root {
     -fx-font-size: 10pt;
     -fx-font-family: "Futura";
-    -fx-base: honeydew;
-    -fx-background: darkslateblue;
+    -fx-base: #e6e6ff;
+    -fx-background: #b3b3ff;
 }
 
 .GameofLife-0 {
