add graph labels and got various grid styles to work

--- a/src/cellsociety/view/resources/graph.css
+++ b/src/cellsociety/view/resources/graph.css
@@ -25,6 +25,6 @@
     -fx-font-size: 1em;
 }
 .chart-legend {
-    -fx-background-color:  #fafad2;
+    -fx-background-color:  black;
     -fx-stroke: #daa520;
 }
