--- a/src/cellsociety/view/resources/default.css
+++ b/src/cellsociety/view/resources/default.css
@@ -113,6 +113,14 @@
   -fx-fill: #0000ff;
 }
 
+.SugarScape-0 {
+  -fx-fill: #000000;
+}
+
+.SugarScape-1 {
+  -fx-fill: #ff0000;
+}
+
 .title {
   -fx-fill: #000000;
 }
